Enable Java 14 preview features during compilation.