@@ -59,4 +59,5 @@ sourceCompatibility = '14'
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
+    options.compilerArgs.addAll(['--enable-preview', '-Xlint:'])
 }
